# specsafe

./: .gitignore  APPLY_MANIFEST.md  README.md  pyproject.toml
docs/: PRD.md  PRD_STATUS_RECONCILIATION_2026-07-10.md  PROJECT_CONSTITUTION.md
scripts/: analyze_kaggle_negative_case_expansion_archive.py  analyze_kaggle_trace_archive.py  analyze_kaggle_trace_collection_v2_archive.py  authorize_hugging_face_dataset_publication.py  build_bounded_negative_evidence_release.py  build_hugging_face_publication_candidate.py  build_hugging_face_space_evidence_index.py  build_hugging_face_space_prebuilt_candidate.py  build_hugging_face_space_publication_candidate.py  close_candidate_calibrator_promotion.py  diagnose_combined_kaggle_trace_calibration.py  diagnose_kaggle_trace_calibration.py  diagnose_kaggle_trace_collection_v2_calibration.py  fit_combined_kaggle_calibrator.py  prepare_kaggle_holdout_upload_bundle.py  prepare_kaggle_negative_case_input_zip.py  prepare_kaggle_negative_case_precollection_bundle.py  prepare_kaggle_trace_collection_readiness_bundle.py  prepare_kaggle_trace_precollection_manifest.py  publish_hugging_face_dataset.py  publish_hugging_face_space.py  replay_candidate_calibrator_on_independent_holdout.py  replay_combined_kaggle_calibrator.py  replay_kaggle_trace_archive.py  replay_kaggle_trace_collection_v2_archive.py  review_bounded_negative_evidence_publication.py  validate_hugging_face_publication_dispatch.py  verify_hugging_face_dataset_publication_receipt.py  verify_hugging_face_space_publication_receipt.py
tests/: test_baseline_policy_normalization.py  (+121 more)
(+1028 files in other folders)
