[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "specsafe"
version = "0.1.0"
description = "A research-grade lab for evaluating confidence-calibrated, load-aware LLM verification policies under explicit causal correctness constraints."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kabo Molefe" },
]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]
publish = [
  "huggingface-hub>=1.0,<2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["specsafe"]
